<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2014 Curt Binder
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in
  ~ all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  ~ THE SOFTWARE.
  -->

<resources>

    <string name="app_name">Portal Notifications</string>
    <string name="activity_name">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_about">About</string>
    <string name="no_alerts">No Notifications</string>
    <string name="message_alerts_from_portal">Current Notifications:</string>
    <string name="edit_notification">Edit Notification</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="add_notification">Add Notification</string>
    <string name="no_username_set">No username set, canceled</string>
    <string name="general">General</string>
    <string name="version">Version</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="param">Parameter</string>
    <string name="cond">Condition</string>
    <string name="value">Value</string>
    <string name="last_sent">Last Sent:</string>
    <string name="success_msg">Successfully %1$s: %2$s</string>
    <string name="added">added</string>
    <string name="updated">updated</string>
    <string name="deleted">deleted</string>
    <string name="credits">Created by Curt Binder\nCopyright &#169; 2019\nLicensed under The MIT License\n\nOriginal Notification icon designed by <a href="http://www.thenounproject.com/DMundo">Mundo</a> from the <a href="http://www.thenounproject.com">Noun Project</a></string>

    <string name="username_key">username</string>
    <string name="username_title">Portal Username</string>
    <string name="autoload_key">autoload</string>
    <string name="autoload_title">Autoload</string>
    <string name="autoload_summary">On app startup</string>

</resources>
